# Harfang_Navier_Stokes_Python

./: main.py  navier_stokes_array.py
c++/: CMakeLists.txt  _clang-format  gen_vs2017_Win64_sln.bat  main.cpp  navier_stokes.cpp  navier_stokes.h  navier_stokes_working_array2D.cpp  pch.h
c++/assets/: default.mat  diffuse.isl  raymarch_shader.isl
python/: harfang_shortcut.py  helper_2d.py  main.py  navier_stokes.py  navier_stokes.sln  navier_stokes_numpy.py
python/assets/: add_source.isl  advect.isl  draw_uvdens.isl  lin_solve.isl  projectA.isl  projectB.isl  set_inputs.isl  vel.isl
